[project]
name = "agentic"
version = "0.1.0"
description = "A small, clean async agentic framework: agents, tools, skills, budgets, and tracing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
